--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <a href="#" class="header-logo">木村家</a>
         <div class="header-list">
-            <a href="file:///C:/Users/kokik/Desktop/html_Cebu%20Island/index.html" class="torip">セブ島</a>
+            <a href="https://koki246.github.io/kimfamily.ceb/" class="torip">セブ島</a>
             <a href="#">子供のころ</a>
             <a href="#">親戚</a>
         </div>
